changed background color of message app

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             min-height: fit-content;
             padding: 40px;
             border-radius: 10px;
-            background-color: red;
+            background-color: rgb(9, 223, 120);
         }
         #form{
             display: flex;
